Atractions and resources clasification added, data cleaning

--- a/02_Transform.ipynb
+++ b/02_Transform.ipynb
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 150,
    "id": "eefc91fe-2eef-4111-93c9-79d0c091628c",
    "metadata": {},
    "outputs": [],
@@ -926,7 +926,7 @@
     "actividades_ocio = datasets[\"ACTIVIDADES_OCIO_DL\"]\n",
     "actividades_ocio[\"TIPO_CCAA\"] = actividades_ocio[\"CCAA\"].apply(clasificar_ccaa)\n",
     "\n",
-    "actividades_ocio.to_csv(\"./exports/actividades_ocio\")"
+    "actividades_ocio.to_csv(\"./exports/actividades_ocio.csv\")"
    ]
   },
   {
@@ -935,12 +935,65 @@
    "id": "d11df940-714f-4349-a1d5-3b8e1f325e62",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Atracciones y Recursos Turísticos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "2d2a14da-ed72-402b-9dfe-4d6368eab1f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['CATEGORIA',\n",
+       " 'CCAA',\n",
+       " 'PROVINCIA',\n",
+       " 'VALORACION_POR_CATEGORIA',\n",
+       " 'TOTAL_OPINIONES_CATEGORIA',\n",
+       " 'VALORACION_GENERAL',\n",
+       " 'TIPO_CATEGORIA']"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atracciones_recursos_turisticos = datasets[\"ATRACCIONES_RECURSOS_TURISTICOS_DL\"]\n",
+    "\n",
+    "# atracciones/recursos más calmados vs más fiesta/turista\n",
+    "\n",
+    "atracciones_recursos_turisticos[\"CATEGORIA\"].unique()\n",
+    "atracciones_recursos_turisticos[\"CATEGORIA\"] = atracciones_recursos_turisticos[\"CATEGORIA\"].replace({\"Comida Y Bebida\": \"Comida y Bebida\"})\n",
+    "\n",
+    "atracciones_pausadas = [\"Activo Naturaleza\", \"Museos\", \"Paisaje Naturaleza\"]\n",
+    "atracciones_fiesta = [\"Activo Urbano\", \"Compras\", \"Paisaje Urbano\", \"Vida Nocturna\"]\n",
+    "atracciones_neutras = [\"Comida y Bebida\", \"Otros\", \"Servicios\"]\n",
+    "\n",
+    "atracciones_recursos_turisticos[\"CATEGORIA\"].unique()\n",
+    "\n",
+    "condiciones = [\n",
+    "    atracciones_recursos_turisticos[\"CATEGORIA\"].isin(atracciones_pausadas),\n",
+    "    atracciones_recursos_turisticos[\"CATEGORIA\"].isin(atracciones_fiesta),\n",
+    "    atracciones_recursos_turisticos[\"CATEGORIA\"].isin(atracciones_neutras)\n",
+    "]\n",
+    "\n",
+    "tipos = [\"Turismo Pausado\", \"Turismo de Fiesta\", \"Turismo Neutro\"]\n",
+    "\n",
+    "atracciones_recursos_turisticos[\"TIPO_CATEGORIA\"] = np.select(condiciones, tipos, default=\"Otro\")\n",
+    "\n",
+    "atracciones_recursos_turisticos.drop(columns=\"Unnamed: 0\", inplace=True)\n",
+    "atracciones_recursos_turisticos.columns.tolist()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d2a14da-ed72-402b-9dfe-4d6368eab1f6",
+   "id": "84eb2a4f-b51d-4784-a2bf-77bf1851e8ba",
    "metadata": {},
    "outputs": [],
    "source": []
