--- a/04_Visualization.ipynb
+++ b/04_Visualization.ipynb
@@ -40,12 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 92,
    "id": "cfde1fb1-4029-437f-828f-17c3b6e75e48",
    "metadata": {},
    "outputs": [],
    "source": [
-    "visitantes_ccaa = pd.read_csv(\"./exports/visitantes_ccaa.csv\")"
+    "visitantes_ccaa = pd.read_csv(\"./exports/visitantes_ccaa.csv\")\n",
+    "visitantes_ccaa_pivot = pd.read_csv(\"./exports/visitantes_ccaa_pivot.csv\")\n",
+    "actividades_ocio = pd.read_csv(\"./exports/actividades_ocio.csv\")\n",
+    "atracciones_recursos_turisticos = pd.read_excel(\"./data/ATRACCIONES_RECURSOS_TURISTICOS_DL.xlsx\")"
    ]
   },
   {
@@ -247,16 +250,6 @@
     "plt.tight_layout()\n",
     "plt.grid(axis='y')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "95e94037-4ca7-43cf-8a5f-441dc7e36d36",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "visitantes_ccaa_pivot = pd.read_csv(\"./exports/visitantes_ccaa_pivot.csv\")"
    ]
   },
   {
@@ -516,7 +509,6 @@
     }
    ],
    "source": [
-    "actividades_ocio = pd.read_csv(\"./exports/actividades_ocio\")\n",
     "top_categorias = actividades_ocio.groupby(\"CATEGORIA\")[\"GASTO_TOTAL\"].sum().sort_values(ascending=False)\n",
     "\n",
     "top_categorias.plot(kind=\"bar\", figsize=(12,6), title=\"Gasto total por categoría de ocio\")\n",
@@ -584,6 +576,40 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bbd28ebd-b8db-43a4-ad57-f2a1eb8614e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Atracciones y recursos turísticos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "902dfa56-3bb3-4452-9d6a-a64b1e2a9aca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Activo Naturaleza', 'Activo Urbano', 'Comida Y Bebida',\n",
+       "       'Comida y Bebida', 'Compras', 'Museos', 'Otros',\n",
+       "       'Paisaje Naturaleza', 'Paisaje Urbano', 'Servicios',\n",
+       "       'Vida Nocturna'], dtype=object)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atracciones_recursos_turisticos[\"CATEGORIA\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5281436f-8852-4db8-8e3d-cb0ebed100f0",
    "metadata": {},
    "outputs": [],
    "source": []
