Mejora de gráficos

--- a/02_Transform.ipynb
+++ b/02_Transform.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# RENOMBRAR CCAA\n",
+    "# RENOMBRAR CCAA PARA PODER GRAFICAR EN CONJUNTO\n",
     "\n",
     "mapeo_ccaa = {\n",
     "    \"com.madrid\": \"Madrid\",\n",
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def normalizar_ccaa(texto):\n",
+    "def renombrar_ccaa(texto):\n",
     "    if pd.isna(texto):\n",
     "        return texto\n",
     "    texto = texto.strip().lower()\n",
@@ -83,14 +83,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def limpiar_y_normalizar(df, columna_ccaa, columnas_num=None):\n",
-    "    # columnas_num es lista de columnas a convertir a números (float)\n",
+    "def limpiar(df, columna_ccaa, columnas_num=None):\n",
     "    df = df.copy()\n",
     "    df[columna_ccaa] = df[columna_ccaa].apply(normalizar_ccaa)\n",
     "    if columnas_num:\n",
     "        for col in columnas_num:\n",
     "            if col in df.columns:\n",
-    "                # Reemplazamos ',' por '.' para decimales y quitamos puntos de miles\n",
     "                df[col] = df[col].astype(str).str.replace('.', '', regex=False).str.replace(',', '.', regex=False)\n",
     "                df[col] = pd.to_numeric(df[col], errors='coerce').fillna(0)\n",
     "    return df"
@@ -119,9 +117,9 @@
    "source": [
     "# LIMPIAR Y RENOMBRAR\n",
     "\n",
-    "df_internacional = limpiar_y_normalizar(df_internacional, \"CCAA_DESTINO\", [\"VISITANTES\"])\n",
-    "df_nacional = limpiar_y_normalizar(df_nacional, \"CCAA_DESTINO\", [\"TURISTAS\"])\n",
-    "df_gasto = limpiar_y_normalizar(df_gasto, \"CCAA_DESTINO\", [\"GASTO\"])"
+    "df_internacional = limpiar(df_internacional, \"CCAA_DESTINO\", [\"VISITANTES\"])\n",
+    "df_nacional = limpiar(df_nacional, \"CCAA_DESTINO\", [\"TURISTAS\"])\n",
+    "df_gasto = limpiar(df_gasto, \"CCAA_DESTINO\", [\"GASTO\"])"
    ]
   },
   {
@@ -145,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FILTRAR AÑOS PARA QUE COINCIDAN\n",
+    "# FILTRAR AÑOS PARA QUE COINCIDAN A PARTIR DE 2019\n",
     "\n",
     "df_internacional = df_internacional[df_internacional[\"AÑO\"] >= 2019]\n",
     "df_nacional = df_nacional[df_nacional[\"AÑO\"] >= 2019]\n",
