Ültimos cambios e intento de storytelling (tenéis que añadir vuestros gráficos a las preguntas correspondientes)

--- a/02_Transform.ipynb
+++ b/02_Transform.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 9,
    "id": "ca672621-f992-444f-a9da-d0d11bf03074",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 10,
    "id": "ff15bf86-ced8-4d16-99da-45ef1b31163c",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 11,
    "id": "3e38e48b-7722-455d-805c-74b44fc09715",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 12,
    "id": "53674745-e5f7-4ac9-a18a-520601ae87bd",
    "metadata": {},
    "outputs": [],
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 13,
    "id": "41048f0d-257d-4110-a596-5bd9b25bbcb4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def limpiar(df, columna_ccaa, columnas_num=None):\n",
     "    df = df.copy()\n",
-    "    df[columna_ccaa] = df[columna_ccaa].apply(normalizar_ccaa)\n",
+    "    df[columna_ccaa] = df[columna_ccaa].apply(renombrar_ccaa)\n",
     "    if columnas_num:\n",
     "        for col in columnas_num:\n",
     "            if col in df.columns:\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 14,
    "id": "19115576-cfd8-4809-8aee-1337961cad7b",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 15,
    "id": "3390ae53-60aa-4680-a0e7-6a0a0585a13d",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 16,
    "id": "ad8d5517-aeba-445b-8388-3d8f45e16f44",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 17,
    "id": "fdeb8d3a-c021-4be7-b2e8-319c0d22cb62",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 18,
    "id": "fcdffbd1-bb68-4c3f-b9a8-103bedd6cbc3",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 19,
    "id": "260f18d7-4fe7-4fb3-ad2b-c18a5146f939",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 20,
    "id": "2e4fe478-d3f8-429c-a505-bec2b9b8d7b7",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 21,
    "id": "8092884d-27aa-4b22-9b5b-ea4a892b97de",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 22,
    "id": "57ab8db2-8d47-41ae-b754-d7513cf1cdbd",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
        "[133 rows x 5 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 23,
    "id": "015d1716-dcf7-4c25-b302-055f8c3e1ac5",
    "metadata": {},
    "outputs": [],
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 24,
    "id": "cfdf85d7-f019-4ef3-8d2d-bb7931a571ea",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
        "Gasto                         7.191382e+08  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 25,
    "id": "9e0ecff7-683a-446c-ae12-29408798df8d",
    "metadata": {},
    "outputs": [],
@@ -571,7 +571,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "014befd3-183f-40cb-b980-5c0e777349ef",
+   "id": "0dab0225-73b3-4f5f-bbba-aa86eff7168d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88da035c-abcd-4eea-9b5e-e20e95c8d0a4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3ac1984-3811-43ef-b060-798c16a682ba",
    "metadata": {},
    "outputs": [],
    "source": []
