Tenía un dato erroneo y me di cuenta al graficarlo

--- a/Intento_05_Storytelling.ipynb
+++ b/Intento_05_Storytelling.ipynb
@@ -213,7 +213,7 @@
    "id": "e589b7c4-67e9-401f-a1c6-9c2a61923e8d",
    "metadata": {},
    "source": [
-    "![Gráfico de gasto](.data/grafico.png)"
+    "![Gráfico de gasto](./data/grafico.png)"
    ]
   },
   {
