Visualization atractions and resources by ccaa type and visitors type

--- a/02_Transform.ipynb
+++ b/02_Transform.ipynb
@@ -941,27 +941,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 172,
    "id": "2d2a14da-ed72-402b-9dfe-4d6368eab1f6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['CATEGORIA',\n",
-       " 'CCAA',\n",
-       " 'PROVINCIA',\n",
-       " 'VALORACION_POR_CATEGORIA',\n",
-       " 'TOTAL_OPINIONES_CATEGORIA',\n",
-       " 'VALORACION_GENERAL',\n",
-       " 'TIPO_CATEGORIA']"
-      ]
-     },
-     "execution_count": 163,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "atracciones_recursos_turisticos = datasets[\"ATRACCIONES_RECURSOS_TURISTICOS_DL\"]\n",
     "\n",
@@ -986,17 +969,19 @@
     "\n",
     "atracciones_recursos_turisticos[\"TIPO_CATEGORIA\"] = np.select(condiciones, tipos, default=\"Otro\")\n",
     "\n",
-    "atracciones_recursos_turisticos.drop(columns=\"Unnamed: 0\", inplace=True)\n",
-    "atracciones_recursos_turisticos.columns.tolist()"
+    "# atracciones_recursos_turisticos.drop(columns=\"Unnamed: 0\", inplace=True)\n",
+    "atracciones_recursos_turisticos[\"TIPO_CCAA\"] = atracciones_recursos_turisticos[\"CCAA\"].apply(clasificar_ccaa)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "id": "84eb2a4f-b51d-4784-a2bf-77bf1851e8ba",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "atracciones_recursos_turisticos.to_csv(\"./exports/atracciones_recursos_turisticos.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
