Últimos cambios de gráficos listos

--- a/Intento_05_Storytelling.ipynb
+++ b/Intento_05_Storytelling.ipynb
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3d43a90-84c5-4154-861e-e6b731671a73",
+   "id": "af7e0256-66b7-4949-916f-f8ec527cc409",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,10 +194,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12b9d9ca-32f1-430e-aff1-6cc0b00f42c7",
+   "id": "aafa30d6-5985-4423-a528-df42f9c2c3be",
    "metadata": {},
    "source": [
-    "![Gráfico de gasto](./data/grafico2.png)"
+    "![Grafico de gasto](data/grafico1.png)"
    ]
   },
   {
@@ -210,10 +210,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e589b7c4-67e9-401f-a1c6-9c2a61923e8d",
+   "id": "7ab6b82a-af0f-42b6-99e2-5a4e04f1c527",
    "metadata": {},
    "source": [
-    "![Gráfico de gasto](./data/grafico.png)"
+    "![Grafico de gasto](data/grafico.png)"
    ]
   },
   {
