Retoque del intento del ejercicio 05_Storytelling

--- a/Intento_05_Storytelling.ipynb
+++ b/Intento_05_Storytelling.ipynb
@@ -5,7 +5,7 @@
    "id": "119f9a2c-3f8b-41d8-8952-71245214a3db",
    "metadata": {},
    "source": [
-    "**Presentación del proyecto ETL Turismo Experiencial en España**"
+    "**PRESENTACIÓN DEL PROYECTO ETL_TURISMO EXPERIENCIAL (NACIONAL E INTERNACIONAL) EN ESPAÑA**"
    ]
   },
   {
@@ -221,7 +221,9 @@
    "id": "91c8b52d-b7ab-4385-86c6-cee16a246866",
    "metadata": {},
    "source": [
-    "En estos gráficos se puede observar como Andalucía es el destino con mayor número de turistas aunque Cataluña le supera con respecto a gasto turístico a pesar de tener menor número de turistas."
+    "En estos gráficos se puede observar como Andalucía es el destino con mayor número de turistas aunque Cataluña le supera con respecto a gasto turístico a pesar de tener un menor número de turistas.\n",
+    "\n",
+    "También se puede ver como duratne los años de Covid hubo mucho menos gasto en todas las Comunidades Autónomas y como a partir del 2022 empezó a crecer, siendo el 2024 el año con más gasto turista a nivel general."
    ]
   },
   {
