--- a/01_Extraction.ipynb
+++ b/01_Extraction.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 127,
-=======
-   "execution_count": 5,
->>>>>>> 80882354efb06dbb2d6407a66e8bd95a88d1fcf7
    "id": "474a2cd8-939d-4de9-9ee0-a58816fb6ffa",
    "metadata": {},
    "outputs": [],
@@ -30,11 +26,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 129,
-=======
-   "execution_count": 6,
->>>>>>> 80882354efb06dbb2d6407a66e8bd95a88d1fcf7
    "id": "b487842e-19f6-49a5-a207-3216ffebdf02",
    "metadata": {},
    "outputs": [],
@@ -43,7 +35,6 @@
     "\n",
     "downloads = {\n",
     "    \"FRONTUR_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/FRONTUR_DL?desde%20%28a%C3%B1o%29=2018&Pa%C3%ADs%20de%20residencia=Todos&Tipo%20de%20visitante=Todos&CCAA%20de%20destino=Todos\",\n",
-<<<<<<< HEAD
     "    \"TURISMO_INTERNO_PROV_CCAA_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/TURISMO_INTERNO_PROV_CCAA_DL?CCAA%20de%20residencia=Todos&CCAA%20de%20destino=Todos\",\n",
     "    \"GASTO_TPV_DESTINO_CCAA_MES_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/GASTO_TPV_DESTINO_CCAA_MES_DL?desde%20(a%C3%B1o)=2018\",\n",
     "    \"CST_GASTO_CONSUMO_TURISTICO_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/CST_GASTO_CONSUMO_TURISTICO_DL?Producto=Todos\"}\n",
@@ -52,23 +43,11 @@
     "   # \"TRANSPORTE_TERRESTRE_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/TRANSPORTE_TERRESTRE_DL?desde%20%28a%C3%B1o%29=2018&Tipo%20transporte=Todos\",\n",
     "   # \"CONECTIVIDAD_AEREA_BUSQUEDAS_INICIO_VIAJE_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/CONECTIVIDAD_AEREA_BUSQUEDAS_INICIO_VIAJE_DL?Pa%C3%ADs%20origen=Todos&Ciudad%20destino=Todos&Tipo%20origen=Todos\",\n",
     "   # \"ESCUCHA_ACTIVA_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/ESCUCHA_ACTIVA_DL?Idioma=Todos&Medio=Todos&Sentimiento=Todos\","
-=======
-    "    \"EGATUR_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/EGATUR_DL?desde%20%28a%C3%B1o%29=2018&Pa%C3%ADs%20de%20residencia=Todos&CCAA%20de%20destino=Todos\",\n",
-    "    \"ACTIVIDADES_OCIO_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/ACTIVIDADES_OCIO_DL?CCAA=Todos&Provincia=Todos\",\n",
-    "    \"CONECTIVIDAD_AEREA_BUSQUEDAS_INICIO_VIAJE_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/CONECTIVIDAD_AEREA_BUSQUEDAS_INICIO_VIAJE_DL?Pa%C3%ADs%20origen=Todos&Ciudad%20destino=Todos&Tipo%20origen=Todos\",\n",
-    "    \"CST_GASTO_CONSUMO_TURISTICO_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/CST_GASTO_CONSUMO_TURISTICO_DL?Producto=Todos\",\n",
-    "    \"ATRACCIONES_RECURSOS_TURISTICOS_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/ATRACCIONES_RECURSOS_TURISTICOS_DL?CCAA=Todos&Provincia=Todos\"\n",
-    "}"
->>>>>>> 80882354efb06dbb2d6407a66e8bd95a88d1fcf7
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 130,
-=======
-   "execution_count": 7,
->>>>>>> 80882354efb06dbb2d6407a66e8bd95a88d1fcf7
    "id": "4e802ea6-ba2c-469d-aeb0-87d56fb515f7",
    "metadata": {},
    "outputs": [],
@@ -76,7 +55,7 @@
     "# Creamos una función para descargar un diccionario de URLS. Para ello tenemos que pasarle la url y un nombre de archivo.\n",
     "# La descarga devuelve un tipo binario, así que usamos BytesIO y lo convertimos en Dataframe con Pandas.\n",
     "\n",
-    "def download_file(url, file_name, folder=\"./data\"):\n",
+    "def download_excel(url, file_name, folder=\"./data\"):\n",
     "    file_path = os.path.join(folder, f\"{file_name}.xlsx\")\n",
     "\n",
     "    if os.path.exists(file_path):\n",
@@ -106,11 +85,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 131,
-=======
-   "execution_count": 8,
->>>>>>> 80882354efb06dbb2d6407a66e8bd95a88d1fcf7
    "id": "8df69d2b-82a4-45f3-8630-9031905621d5",
    "metadata": {},
    "outputs": [
@@ -118,19 +93,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "- FRONTUR_DL.xlsx ya existe.\n",
       "- TURISMO_INTERNO_PROV_CCAA_DL.xlsx ya existe.\n",
       "- GASTO_TPV_DESTINO_CCAA_MES_DL.xlsx ya existe.\n",
       "- CST_GASTO_CONSUMO_TURISTICO_DL.xlsx ya existe.\n"
-=======
-      "- FRONTUR_DL.xlsx already exists.\n",
-      "- EGATUR_DL.xlsx already exists.\n",
-      "- ACTIVIDADES_OCIO_DL.xlsx already exists.\n",
-      "- CONECTIVIDAD_AEREA_BUSQUEDAS_INICIO_VIAJE_DL.xlsx already exists.\n",
-      "- CST_GASTO_CONSUMO_TURISTICO_DL.xlsx already exists.\n",
-      "ATRACCIONES_RECURSOS_TURISTICOS_DL.csv downloaded and saved.\n"
->>>>>>> 80882354efb06dbb2d6407a66e8bd95a88d1fcf7
      ]
     }
    ],
@@ -140,18 +106,14 @@
     "datasets = {}\n",
     "\n",
     "for name, url in downloads.items():\n",
-    "    df = download_file(url, name)\n",
+    "    df = download_excel(url, name)\n",
     "    if df is not None:\n",
     "        datasets[name] = df"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 223,
-=======
-   "execution_count": 9,
->>>>>>> 80882354efb06dbb2d6407a66e8bd95a88d1fcf7
    "id": "5ac71938-0b9c-4adb-afba-7fd4465dc0c5",
    "metadata": {
     "scrolled": true
@@ -163,7 +125,6 @@
      "text": [
       "\n",
       " FRONTUR_DL\n",
-<<<<<<< HEAD
       "Columns: ['Unnamed: 0', 'AÑO', 'MES', 'PAIS_RESIDENCIA', 'TIPO_VISITANTE', 'CCAA_DESTINO', 'VISITANTES']\n",
       "First 3 rows:\n",
       "    Unnamed: 0   AÑO  MES PAIS_RESIDENCIA TIPO_VISITANTE CCAA_DESTINO  \\\n",
@@ -201,24 +162,6 @@
       "\n",
       "   NUM_GASTO_RECEPTOR  \n",
       "0              1819.9  \n"
-=======
-      "Columns: ['AÑO', 'MES', 'PAIS_RESIDENCIA', 'TIPO_VISITANTE', 'CCAA_DESTINO', 'VISITANTES']\n",
-      "\n",
-      " EGATUR_DL\n",
-      "Columns: ['AÑO', 'MES', 'PAIS_RESIDENCIA', 'TIPO_VISITANTE', 'CCAA_DESTINO', 'PERNOCTACIONES', 'GASTO_TOTAL']\n",
-      "\n",
-      " ACTIVIDADES_OCIO_DL\n",
-      "Columns: ['AÑO', 'MES', 'PRODUCTO', 'CATEGORIA', 'CCAA', 'PROVINCIA', 'ENTRADAS', 'VISITAS_PAGINAS', 'GASTO_TOTAL', 'PRECIO_MEDIO_ENTRADA', 'TRANSACCIONES']\n",
-      "\n",
-      " CONECTIVIDAD_AEREA_BUSQUEDAS_INICIO_VIAJE_DL\n",
-      "Columns: ['Unnamed: 0', 'AÑO', 'MES', 'PAIS_ORIGEN', 'CIUDAD_DESTINO', 'TIPO_ORIGEN', 'BUSQUEDAS', 'ANTELACION', 'ESTANCIA_MEDIA', 'VARIACION_INTERANUAL_BUSQUEDAS']\n",
-      "\n",
-      " CST_GASTO_CONSUMO_TURISTICO_DL\n",
-      "Columns: ['Unnamed: 0', 'AÑO', 'PRODUCTO', 'NUM_GASTO_INTERIOR', 'NUM_GASTO_INTERNO', 'NUM_GASTO_EMISOR', 'NUM_CONSUMO_TURISTICO_INTERIOR', 'NUM_CONSUMO_OTROS_COMPONENTES_TURISTICOS', 'NUM_GASTO_RECEPTOR']\n",
-      "\n",
-      " ATRACCIONES_RECURSOS_TURISTICOS_DL\n",
-      "Columns: ['CATEGORIA', 'CCAA', 'PROVINCIA', 'VALORACION_POR_CATEGORIA', 'TOTAL_OPINIONES_CATEGORIA', 'VALORACION_GENERAL']\n"
->>>>>>> 80882354efb06dbb2d6407a66e8bd95a88d1fcf7
      ]
     }
    ],
@@ -227,7 +170,6 @@
     "\n",
     "for name, df in datasets.items():\n",
     "    print(f\"\\n {name}\")\n",
-<<<<<<< HEAD
     "    print(\"Columns:\", df.columns.tolist())\n",
     "    print(\"First 3 rows:\\n\", df.head(1))"
    ]
@@ -728,9 +670,6 @@
    ],
    "source": [
     "df_gasto.groupby(\"TIPO_ORIGEN\")[\"GASTO\"].sum()"
-=======
-    "    print(\"Columns:\", df.columns.tolist())"
->>>>>>> 80882354efb06dbb2d6407a66e8bd95a88d1fcf7
    ]
   },
   {
