Guardando cambios antes de merge con main

--- a/04_Visualization.ipynb
+++ b/04_Visualization.ipynb
@@ -296,6 +296,7 @@
     "    figsize=(7,7))\n",
     "\n",
     "plt.title(\"Proporción por tipo de turistas\")\n",
+    "plt.savefig(\"grafico2.png\", dpi=155)   # GUARDAR GRÁFICO PARA LA PARTE 5\n",
     "plt.show()"
    ]
   },
