--- a/Intento_05_Storytelling.ipynb
+++ b/Intento_05_Storytelling.ipynb
@@ -218,10 +218,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "378cd659-3fa6-4ea4-bebb-8725a97f992a",
+   "metadata": {},
+   "source": [
+    "- Diferencia entre turismo nacional e internacional"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10f75696-4ad8-427e-a76c-a74dcd69a7bb",
+   "metadata": {},
+   "source": [
+    "![Grafico de gasto](data/grafico2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "91c8b52d-b7ab-4385-86c6-cee16a246866",
    "metadata": {},
    "source": [
-    "En estos gráficos se puede observar como Andalucía es el destino con mayor número de turistas aunque Cataluña le supera con respecto a gasto turístico a pesar de tener un menor número de turistas.\n",
+    "En estos gráficos se puede observar como Andalucía es el destino con mayor número de turistas, aunque Cataluña le supera con respecto a gasto turístico a pesar de tener un menor número de turistas. \n",
+    "\n",
+    "El número de turismo nacional es mucho mayor que el turismo internacional entre los años 2019 y 2025.\n",
     "\n",
     "También se puede ver como duratne los años de Covid hubo mucho menos gasto en todas las Comunidades Autónomas y como a partir del 2022 empezó a crecer, siendo el 2024 el año con más gasto turista a nivel general."
    ]
