Añadidas mejoras de ejercicios 4 y 5 desde rama-natalia

--- a/05_Storytelling.ipynb
+++ b/05_Storytelling.ipynb
@@ -41,10 +41,13 @@
     "- ¿La duración del viaje ha aumentado frente a antes de la pandemia?\n",
     "- ¿Qué tipos de experiencias atraen más (eventos, naturaleza, cultura, gastronomía, bienestar)?\n",
     "- ¿Cómo se mueve el turismo internacional vs. nacional en las comunidades autónomas?\n",
-    "  ![Grafico de gasto](data/grafico1.png)\n",
-    "  ![Grafico de gasto](data/grafico.png)\n",
-    "  \n",
+    "![Grafico de gasto](data/grafico1.png)\n",
+    "![Grafico de gasto](data/grafico.png)\n",
+    "![Grafico de gasto](data/grafico2.png)\n",
+    "\n",
     "En estos gráficos se puede observar como Andalucía es el destino con mayor número de turistas, aunque Cataluña le supera con respecto a gasto turístico a pesar de tener un menor número de turistas. La mayor parte de este turismo es nacional.\n",
+    "\n",
+    "El número de turismo nacional es mucho mayor que el turismo internacional entre los años 2019 y 2025.\n",
     "\n",
     "También se puede ver como durante los años de Covid hubo mucho menos gasto en todas las Comunidades Autónomas y como a partir del 2022 empezó a crecer, siendo el 2024 el año con más gasto turista a nivel general.\n",
     "\n",
